fix newsletter/confirmed amazon button spacing for mobile

--- a/_sass/_utility.scss
+++ b/_sass/_utility.scss
@@ -113,7 +113,7 @@ button.large {
     background-color: #e47911;
   }
   @media screen and (max-width: 768px) {
-    padding: 1%;
+    padding: 1% 1% 0 1%;
   }
 }
 
